# megra.rs

./: .gitignore  Cargo.toml  Dockerfile  LEAME.md  README.md
changelogs/: megra_0_0_10.md  megra_0_0_11.md  megra_0_0_12.md  megra_0_0_13.md  megra_0_0_14.md  megra_0_0_15.md  megra_0_0_16.md  megra_0_0_6.md  megra_0_0_7.md  megra_0_0_8.md  megra_0_0_9.md
documentation/: Function_List.md  Sound_Events_and_Parameters.md
documentation/en/: Function_List.md  Sound_Events_and_Parameters.md
documentation/en/tutorials/: megra_basic_tutorial.megra3
documentation/es/: Function_List.md  Sound_Events_and_Parameters.md
documentation/es/ejemplos/: ejemplos_generadors.megra3
documentation/es/tutorials/: megra_tutorial_basico.megra3
documentation/examples/: generator_examples.megra3
fonts/: LICENSE
helper_functions/: init.megra3
scoreviz_interface/: scoreviz.megra3  scoreviz_tutorial.megra3
src/: ast_types.rs  builtin_types.rs  callbacks.rs  commands.rs  cyc_parser.rs  cyc_parser2.rs  duration_tree.rs  editor.rs  eval.rs  event.rs  event_helpers.rs  event_processor.rs  file_interpreter.rs  generator.rs  generator_processor.rs  interpreter.rs  lib.rs  load_audio_file.rs  main.rs  markov_sequence_generator.rs  midi_input.rs  music_theory.rs  new_parser.rs  osc_client.rs  osc_receiver.rs  osc_sender.rs  parameter.rs  parser.rs  pfa_growth.rs  pfa_reverse.rs  real_time_streaming.rs  repl.rs  sample_set.rs  scheduler.rs  session.rs  standard_library.rs  synth_parameter_value_arithmetic.rs  visualizer_client.rs
src/editor/: custom_editbox.rs  livecode_text_edit.rs  megra_editor.rs  syntax_highlighting.rs
src/eval/: arithmetic.rs  commands.rs  comparison.rs  compose.rs  dynpar.rs  event_getters.rs  generator_list.rs  generator_modifier.rs  generator_processor.rs  map.rs  matrix.rs  megra_match.rs  midi.rs  midi_helpers.rs  multiplyer.rs  now.rs  osc.rs  progn.rs  resolver.rs  string_helpers.rs  types.rs  vector.rs
src/eval/constructors/: chop.rs  cyc.rs  facts.rs  flower.rs  friendship.rs  fully.rs  infer.rs  learn.rs  linear.rs  loop.rs  nuc.rs  stages.rs  vals.rs
src/eval/events/: control.rs  mod.rs  modulators.rs  note.rs  parameters.rs  sound.rs
src/eval/generator_processor/: apple.rs  every.rs  exhibit.rs  inhibit.rs  lifemodel.rs  mapper.rs  pear.rs
src/eval/session/: mod.rs  sync_context.rs
src/generator/: modifier_functions.rs  modifier_functions_raw.rs
src/generator_processor/: apple_processor.rs  every_processor.rs  generator_wrapper_processor.rs  lifemodel_processor.rs  mapper.rs  pear_processor.rs
src/new_parser/: reduce_nuc.rs
src/new_parser/eval/: mod.rs
src/old_parser/: parser_helpers.rs
src/old_parser/handlers/: builtin_control_event.rs  builtin_generator_modifier_function.rs  builtin_generator_processor.rs  builtin_multiplyer.rs  builtin_sound_event.rs  builtin_sync_context.rs  custom_sample_event.rs
src/parameter/: modifier.rs
src/parameter/modifier/: bounce_modifier.rs  brownian_modifier.rs  envelope_modifier.rs  randrange_modifier.rs
src/parser/: handlers.rs  parse_parameter_events.rs  parser_handlers.rs  parser_helpers.rs
src/parser/eval/: arithmetic.rs  commands.rs  comparison.rs  compose.rs  dynpar.rs  event_getters.rs  generator_list.rs  generator_modifier.rs  generator_processor.rs  lazy_resolve.rs  map.rs  matrix.rs  megra_match.rs  midi.rs  midi_helpers.rs  mod.rs  multiplyer.rs  osc.rs  print.rs  progn.rs  resolver.rs  string_helpers.rs  structs.rs  types.rs  vector.rs
src/parser/handlers/: builtin_commands.rs  builtin_compose.rs  builtin_constructors.rs  builtin_control_event.rs  builtin_dynamic_parameter.rs  builtin_generator_list.rs  builtin_multiplexer.rs  (+8 more)
src/standard_library/: standard_library_cat.rs  standard_library_de.rs  standard_library_en.rs  standard_library_es.rs
(+47 files in other folders)
