[package]
name = "megra_rs"
version = "0.0.4"
authors = ["nik <nik@parkellipsen.de>"]
edition = "2021"
license = "GPL-3.0+"
description = "A live-coding language with Markov chains."
readme = "README.md"
repository = "https://github.com/the-drunk-coder/megra.rs/"
categories = ["multimedia::audio"]
keywords = ["audio", "livecoding", "dsl", "sampler"]

[dependencies]
num = "0.4"
cpal = { version="0.13", features = ["jack"] }
directories-next = "2.0"
anyhow = "1.0"
crossbeam = "0.8"
parking_lot = "0.11"
ruffbox_synth = "0.2.0"
nom = "7.1"
vom_rs = "0.2"
rustyline = "6.3.0"
claxon = "0.4.3"
getopts = "0.2"
rand = "0.8.4"
rust-music-theory = "0.2"
egui = { version="0.16.0", features = ["persistence"] }
epi = { version="0.16.0", features = ["persistence"] }
epaint = "0.16.0"
egui_glium = { version="0.16.0", features = ["persistence"] }
serde = { version = "1", features = ["derive", "rc"], optional = true }
dashmap = "5.1.0"
chrono = "0.4"
enum-map = { version = "1", features = ["serde"] }
rosc = "~0.5"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[features]
default = ["serde"] # enable ringbuffer for WASAPI !
ringbuffer = []