[package]
name = "megra_rs"
version = "0.0.7"
authors = ["nik <nik@parkellipsen.de>"]
edition = "2021"
license = "GPL-3.0+"
description = "A live-coding language with Markov chains."
readme = "README.md"
repository = "https://github.com/the-drunk-coder/megra.rs/"
categories = ["multimedia::audio"]
keywords = ["audio", "livecoding", "dsl", "sampler"]

[dependencies]
num = "0.4"
cpal = { version="0.13", features = ["jack"] }
directories-next = "2.0"
anyhow = "1.0"
crossbeam = "0.8"
parking_lot = "0.12"
ruffbox_synth = "0.7"
#ruffbox_synth = { path = "../ruffbox-synth" }
nom = "7.1"
vom_rs = "0.3"
#vom_rs = { path = "../vom.rs" }
rustyline = "9.1"
claxon = "0.4"
getopts = "0.2"
rand = "0.8"
rust-music-theory = "0.2"
egui = { version="0.21", features = ["persistence"] }
eframe = { version="0.21", features = ["persistence"] }
epaint = "0.21"
#egui_glow = { version="0.18.1" }
serde = { version = "1", features = ["derive", "rc"], optional = true }
dashmap = "5.2"
chrono = "0.4"
enum-map = { version = "2.4", features = ["serde"] }
rosc = "~0.5"
hound = "3.4"
regex = "1.5"
midir = "0.8.0"
reqwest = {version = "0.11.16", features = ["blocking"]}
zip = "0.6.4"
sha256 = "1.1"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[features]
default = ["serde"] # enable ringbuffer for WASAPI !
ringbuffer = []
low_latency = [] # blocksize 128 instead of 512
